# nanopb

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  DELIVERABLES_CHECKLIST.md  Dockerfile  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  Makefile  PHASE1_SUMMARY.md  README.md  README_EXAMPLE.md  README_FILTER.md  README_VALIDATION.md  REFACTOR_ROADMAP.md  REPEATED_SUBMESSAGES_GUIDE.md  SERVICE_IMPLEMENTATION.md  TEST_RESULTS.md  advanced_main.c  advanced_validation_example  all_in_one.proto  chat.proto  chat_validate.c  chat_validate.h  debug_generator.py  debug_validation.py  header_example.proto  header_example_validate.c  header_example_validate.h  main.c  pb_common.c  pb_decode.c  pb_encode.c  pb_filter_macros.h  pb_validate.c  pb_validate.h  proto_filter.c  proto_filter.h  proto_flatten.py  pytest.ini  requirements.txt  (+44 more)
.devcontainer/: .gitignore  Dockerfile  README.md  dev-setup.sh  devcontainer.json  docker-compose.yml
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  nanopb_generator.py
docs/: ARCHITECTURE.md  DATA_GENERATOR.md  DATA_GENERATOR_QUICKSTART.md  DEVELOPER_GUIDE.md  PROTOBUF_FUNDAMENTALS.md  USING_NANOPB_DATA_GENERATOR.md  USING_NANOPB_GENERATOR.md  WHY_NANOPB.md  reference.md  validation.md
examples/validation_simple/: CMakeLists.txt  Makefile  README.md  validation_simple.options  validation_simple.proto
generator/: NANOPB_DATA_GENERATOR_README.md  README.md  nanopb_data_generator.py  nanopb_generator.py  nanopb_validator.py  test_nanopb_data_generator.py
gengen/: test_basic_validation_validate.c  (+3 more)
tests/: README.md  (+14 more)
(+89 files in other folders)
